--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 
     closeBtn.addEventListener("click", () => {
       navigation.classList.remove("active");
+      //hello from the laptop
     });
   </script>
 
