--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,16 @@
 <body>
     <header>
         <div class="nav-bar">   
-            <img src="img/logo.png" alt="Sti" class="imagelogo">
+            <img  src="img/logo.png"  alt="Sti" class="imagelogo" >
+
+            <div class="nav-sort">
+              <div class="navS-items">
+                <a href="#"><i class="uil uil-compass"></i>Senior High</a>
+                <a href="#"><i class="uil uil-info-circle"></i>College</a>
+                <a href="#"><i class="uil uil-envelope"></i>Accessories</a>
+
+              </div>
+            </div>
           
           <div class="navigation">
             <div class="nav-items">
