--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
   </header>
 
   <section class="home">
-    
+    <div class="slideshow">
+      <img src="img/image1.jpg" alt="Image 1">
+      <img src="img/image2.jpg" alt="Image 2">
+      <img src="img/image3.jpg" alt="Image 3">
+  
+      <a class="prev" onclick="plusSlides(-1)">❮</a>
+      <a class="next" onclick="plusSlides(1)">❯</a>
+    </div>
   </section>
 
   <section class="content">
@@ -97,11 +104,12 @@
       <p>&copy; ©2022 STI Education Services Group, Inc. All rights reserved</p>
       
       <div class="legal__links">
-        <span>Made with <span class="heart">❤️</span> from group 2</span>
+        <span>Made with <span class="heart">❤️</span> from group 3</span>
       </div>
     </div>
   </footer>
   <script type="text/javascript" src="scripts/index.js"></script>
+  <script type="text/javascript" src="scripts/glizzy.js"></script>
 
 </body>
 </html>
