slideshow + more images

--- a/shop.html
+++ b/shop.html
@@ -51,13 +51,10 @@
           
           <div class="navigation">
             <div class="nav-items">
-              <i class="uil uil-times nav-close-btn"></i>
-              <a href="#"> Explore</a>
-              <a href="#"> About</a>
-              <a href="#"> Login</a>
+              <a href="index.html">Back</a>
+              <a href="#">Login</a>
             </div>
           </div>
-          <i class="uil uil-apps nav-menu-btn"></i>
         </div>
         <div class="scroll-indicator-container">
         </div>
