--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
     <div class="nav-bar">   
         <img src="img/logo.png" alt="Sti" class="imagelogo">
       
-      <div class="navigation">
-        <div class="nav-items">
-          <i class="uil uil-times nav-close-btn"></i>
-          <a href="shop.html"><i class="uil uil-compass"></i> Explore</a>
-          <a href="#"><i class="uil uil-info-circle"></i> About</a>
-          <a href="#"><i class="uil uil-envelope"></i> Login</a>
-        </div>
+        <div class="navigation">
+          <div class="nav-items">
+            <a href="shop.html">Shop now</a>
+            <a href="#">Login</a>
+          </div>
       </div>
       <i class="uil uil-apps nav-menu-btn"></i>
     </div>
@@ -31,9 +29,17 @@
       <img src="img/image1.jpg" alt="Image 1">
       <img src="img/image2.jpg" alt="Image 2">
       <img src="img/image3.jpg" alt="Image 3">
-  
-      <a class="prev" onclick="plusSlides(-1)">❮</a>
-      <a class="next" onclick="plusSlides(1)">❯</a>
+      <img src="img/image4.jpg" alt="Image 4">
+      <img src="img/image5.jpg" alt="Image 5">
+      <img src="img/image6.jpg" alt="Image 6">
+      <img src="img/image7.jpg" alt="Image 7">
+      <img src="img/image8.jpg" alt="Image 8">
+      <img src="img/image9.jpg" alt="Image 9">
+      <img src="img/image10.jpg" alt="Image 10">
+      <img src="img/image11.jpg" alt="Image 11">
+      <img src="img/image12.jpg" alt="Image 12">
+
+
     </div>
   </section>
 
