--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <div class="navigation">
           <div class="nav-items">
             <a href="shop.html">Shop now</a>
-            <a href="#">Login</a>
+            <a href="login.html">Login</a>
           </div>
       </div>
-      <i class="uil uil-apps nav-menu-btn"></i>
     </div>
     <div class="scroll-indicator-container">
     </div>
