--- a/shop.html
+++ b/shop.html
@@ -52,7 +52,7 @@
           <div class="navigation">
             <div class="nav-items">
               <a href="index.html">Back</a>
-              <a href="#">Login</a>
+              <a href="login.html">Login</a>
             </div>
           </div>
         </div>
